--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"react-error-boundary": "^3.1.4",
 		"react-query": "^3.34.12",
 		"react-select": "^5.2.2",
+		"recharts": "^2.1.8",
 		"sass": "^1.49.0",
 		"tailwindcss": "^3.0.16"
 	},
